# Video-Waste-Dumping-Detection---IWDD

./: .gitignore  README.md  pyproject.toml
config/: models_config.yaml
src/api_integration/file_servers/: .env.sample  README.md  download_data_gdrive.py
src/api_integration/google_drive/: README.md  download_data.py
src/data/: dataset.py
src/model/: model.py  multimodal_model.py  yolo.py
src/scripts/: merge_datasets.py  plot_transrate.py  preprocess_synthetic_bags.py  preprocess_taco.py  preprocess_wasteinsight.py  train.py  train_yolo.py
