[project]
name = "iwdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coco-to-yolo>=1.2.1",
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "gdown>=5.2.0",
    "huggingface>=0.0.1",
    "kagglehub>=0.3.13",
    "lightning>=2.5.5",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pytorchvideo>=0.1.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "ultralytics>=8.3.225",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
